# DFramework

./: ,gitignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FDW.sln  README.md
engine/D3DFramework/: CMakeLists.txt  D3DFramework.vcxproj  D3DFramework.vcxproj.filters
engine/D3DFramework/D3DFramework/: D3DFW.cpp  D3DFW.h  pch.h
engine/D3DFramework/D3DFramework/GraphicUtilites/: BaseCommandQueue.cpp  BaseCommandQueue.h  BasePipelineObject.cpp  BilateralFilter.cpp  BufferDescriptorHeap.cpp  BufferDescriptorHeap.h  BufferManager.cpp  BufferManager.h  CommandList.h  CommandListTemplate.h  CommandQueue.cpp  ComputePipelineObject.cpp  ComputePipelineObject.h  DynamicSRV_UAVPacker.cpp  DynamicSRV_UAVPacker.h  FResource.cpp  FResource.h  GraphicsPipelineObject.h  ICommandList.h  Materials.cpp  RTPipelineObject.h  RTShaderBindingTable.cpp  ResourcePacker.cpp  ResourcePacker.h  StructuredBuffer.cpp  StructuredBuffer.h
engine/D3DFramework/D3DFramework/GraphicUtilites/RenderThreadUtils/: AsyncCommandQueue.cpp  AsyncCommandQueue.h  CommandListPool.h  CommandRecipe.cpp  CommandRecipe.h  RenderThreadManager.cpp
engine/D3DFramework/D3DFramework/Objects/: MaterialsManager.cpp  Object.cpp  Object.h  RTObjectHelper.h  SimpleObjects.cpp
engine/D3DFramework/D3DFramework/Utilites/: Audio.cpp  AudioManager.cpp  Macroses.h  UtilFunctions.h
engine/D3DFramework/D3DFramework/Utilites/Serializer/: ReflectionImpl.h
engine/D3DFramework/D3DFrameworkTest/shaderBytecode/: ScreenPostProcess.shader
engine/WinWindow/: CMakeLists.txt  WinWindow.sln  WinWindow.vcxproj  WinWindow.vcxproj.filters
engine/WinWindow/WinWindow/: pch.h
engine/WinWindow/WinWindow/Debug/: WinWindow.exe.recipe  vc143.idb
engine/WinWindow/WinWindow/Debug/WinWindow.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  WinWindow.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
engine/WinWindow/WinWindow/InputSystem/: WinWindowInputLayer.h  WinWindowInputRouter.cpp  WinWindowInputRouter.h
engine/WinWindow/WinWindow/Utils/: Thread.cpp  Thread.h  Timer.cpp  WindowSettings.h  WorkerThread.cpp
engine/WinWindow/WinWindow/Utils/Reflection/: ClassInfo.cpp  ClassInfo.h  Reflection.h  ReflectionRegistry.h
engine/WinWindow/WinWindow/Utils/Scripting/: ScriptLexer.cpp  ScriptManager.cpp  ScriptManager.h  ScriptNodes.cpp  ScriptParser.h  ScriptValue.h
engine/WinWindow/WinWindow/Utils/Serializer/: BinarySerializer.h  Concepts.h  PolymorphicFactory.h
engine/WinWindow/WinWindowTest/: ScriptTests.cpp  ScriptTests.h  TestBaseWindow.h
projects/FDW/: CMakeLists.txt  FDW.vcxproj  FDW.vcxproj.filters
projects/FDW/Content/SampleModels/sponza/: scene.gltf
projects/FDW/Content/Shaders/AtlasRTShadow/: RS.hlsl  RayGen.hlsl
projects/FDW/Content/Shaders/BrightPass/: PS.hlsl  RS.hlsl
projects/FDW/Content/Shaders/ClusteredShading_BuildGridPass/: RS.hlsl
projects/FDW/Content/Shaders/ClusteredShading_LightsToClusteresPass/: CS.hlsl  RS.hlsl
projects/FDW/Content/Shaders/CompositeBloom/: RS.hlsl  SameShadersStructs.hlsli
projects/FDW/Content/Shaders/CopyDepthToHIZ/: RS.hlsl
projects/FDW/Content/Shaders/DefaultInclude/: AtlasRTShadowsStructures.hlsli  IBLFunctions.hlsli  LTCFunctions.hlsli  PBRFunctions.hlsli  ParallaxOcclusionMapping.hlsli  Structures.hlsli  Utilits.hlsli
projects/FDW/Content/Shaders/DefferedFirstPass/: PS.hlsl  RS.hlsl  VS.hlsl
projects/FDW/Content/Shaders/DefferedSecondPass/: PS.hlsl  RS.hlsl
projects/FDW/Content/Shaders/GaussianBlur/: VS.hlsl
projects/FDW/Content/Shaders/PostProcess/: PS.hlsl
projects/FDW/src/MainRenderer/: GlobalConfig.cpp  GlobalConfig.h  GlobalRenderThreadManager.cpp  GlobalRenderThreadManager.h  GlobalTextureHeap.cpp  GlobalTextureHeap.h  MainRenderer.cpp  MainRenderer.h  MainRendererComponent.cpp  PSOManager.cpp
projects/FDW/src/System/: AtlasRTShadowLightParams.h  AtlasRTShadowSystem.cpp  AtlasRTShadowSystem.h  AudioSystem.cpp  BloomEffectSystem.h  CameraFrustum.h  CameraSystem.cpp  CameraSystem.h  CameraSystemInputLayer.cpp  CameraSystemInputLayer.h  ClusteredLightningSystem.cpp  LightSystem.cpp  LightSystem.h  MeshesCullingSubSystem.cpp  NRenderSystemNotifyType.h  RTShadowSystem.cpp  RectsPacker.cpp  RectsPacker.h  RenderMeshesSystem.cpp  RenderMeshesSystem.h  SceneAnimationSystem.h  SkyboxRenderSystem.cpp  SkyboxRenderSystem.h  TAASystem.cpp  TAASystem.h  TAASystemData.h
projects/FDW/src/UI/: MainRenderer_UIComponent.cpp  MainRenderer_UIComponent.h  UIInputLayer.cpp
projects/FDW/src/Utilities/: HelperFunctions.cpp  HelperFunctions.h
projects/FDW/src/World/: World.cpp  World.h
(+645 files in other folders)
